--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-fetch": "^2.6.1",
     "node-fetch-polyfill": "^2.0.6",
     "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
